force-app/main/default/objects/Zuora__Subscription__c/fields/Adresse_livraison_1__c.field-meta.xml
<CustomField>
    <fullName>Adresse_livraison_1__c</fullName>
    <formula>IF(ModeLivraison__c=&#39;Adresse Porteur&#39;,Zuora__Account__r.NoVoie__c +&#39; &#39;+ TEXT(Zuora__Account__r.TypeVoie__c) +&#39; &#39;+ Zuora__Account__r.NomVoie__c ,IF(ModeLivraison__c =&#39;Adresse Payeur&#39; , Zuora__Account__r.Payeur__r.NoVoie__c +&#39; &#39;+ TEXT(Zuora__Account__r.Payeur__r.TypeVoie__c) + &#39; &#39;+ Zuora__Account__r.Payeur__r.NomVoie__c  ,&#39; &#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse livraison 1</label>
    <type>Text</type>
</CustomField>