force-app/main/default/objects/Zuora__Subscription__c/fields/Adresse_livraison_2__c.field-meta.xml
<CustomField>
    <fullName>Adresse_livraison_2__c</fullName>
    <formula>IF(ModeLivraison__c=&#39;Adresse Porteur&#39;,Zuora__Account__r.Residence__c +&#39; &#39;+  Zuora__Account__r.Batiment__c  +&#39; &#39;+  Zuora__Account__r.Appartement__c  +&#39; &#39;+  Zuora__Account__r.Escalier__c +&#39; &#39;+ Zuora__Account__r.Etage__c ,IF(ModeLivraison__c =&#39;Adresse Payeur&#39;,Zuora__Account__r.Payeur__r.Residence__c +&#39; &#39;+ Zuora__Account__r.Payeur__r.Batiment__c + &#39; &#39;+ Zuora__Account__r.Payeur__r.Appartement__c+&#39; &#39;+Zuora__Account__r.Payeur__r.Escalier__c+&#39; &#39;+Zuora__Account__r.Payeur__r.Etage__c ,&#39; &#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse livraison 2</label>
    <type>Text</type>
</CustomField>