force-app/main/default/objects/Zuora__Subscription__c/fields/Adresse_livraison_Pays__c.field-meta.xml
<CustomField>
    <fullName>Adresse_livraison_Pays__c</fullName>
    <formula>IF(ModeLivraison__c=&#39;Adresse Porteur&#39;,TEXT(Zuora__Account__r.Pays__c),IF(ModeLivraison__c =&#39;Adresse Payeur&#39;, TEXT(Zuora__Account__r.Payeur__r.Pays__c),&#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse livraison Pays</label>
    <type>Text</type>
</CustomField>