force-app/main/default/objects/Zuora__Subscription__c/fields/Adresse_livraison_ville__c.field-meta.xml
<CustomField>
    <fullName>Adresse_livraison_ville__c</fullName>
    <formula>IF(ModeLivraison__c=&#39;Adresse Porteur&#39;, Zuora__Account__r.Ville__c ,IF(ModeLivraison__c =&#39;Adresse Payeur&#39;, Zuora__Account__r.Payeur__r.Ville__c ,&#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse livraison ville</label>
    <type>Text</type>
</CustomField>