force-app/main/default/objects/Zuora__Subscription__c/fields/CancelCase__c.field-meta.xml
<CustomField>
    <fullName>CancelCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demande de desabo</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SubscriptionsCancel</relationshipLabel>
    <relationshipName>SubscriptionsCancel</relationshipName>
    <type>Lookup</type>
</CustomField>