force-app/main/default/objects/Zuora__Subscription__c/fields/CancelCaseID__c.field-meta.xml
<CustomField>
    <fullName>CancelCaseID__c</fullName>
    <description>id synchronise de Zuora</description>
    <label>ID Demande de desabo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>