force-app/main/default/objects/Zuora__Subscription__c/fields/Cinema__c.field-meta.xml
<CustomField>
    <fullName>Cinema__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>le nom du cinema ou WEB, HORIZ</description>
    <label>Cinéma</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>