force-app/main/default/objects/Zuora__Subscription__c/fields/CodeOffreCo__c.field-meta.xml
<CustomField>
    <fullName>CodeOffreCo__c</fullName>
    <label>Code Offre Commerciale</label>
    <length>20</length>
    <type>Text</type>
</CustomField>