force-app/main/default/objects/Zuora__Subscription__c/fields/CodePromo__c.field-meta.xml
<CustomField>
    <fullName>CodePromo__c</fullName>
    <description>Code promo de zuora du module promo code</description>
    <label>Code Promo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>