force-app/main/default/objects/Zuora__Subscription__c/fields/Date_de_debut_de_contrat__c.field-meta.xml
<CustomField>
    <fullName>Date_de_debut_de_contrat__c</fullName>
    <formula>Zuora__ContractEffectiveDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de début de contrat</label>
    <type>Date</type>
</CustomField>