force-app/main/default/objects/Zuora__Subscription__c/fields/DateFinContrat__c.field-meta.xml
<CustomField>
    <fullName>DateFinContrat__c</fullName>
    <description>custom field for Date Fin Contrat pour les cancel sub a term</description>
    <label>Date Fin Contrat</label>
    <type>Date</type>
</CustomField>