force-app/main/default/objects/Zuora__Subscription__c/fields/DateTarifFacture__c.field-meta.xml
<CustomField>
    <fullName>DateTarifFacture__c</fullName>
    <label>DateTarifFacture</label>
    <type>Date</type>
</CustomField>