force-app/main/default/objects/Zuora__Subscription__c/fields/HermesIntituleOffre__c.field-meta.xml
<CustomField>
    <fullName>HermesIntituleOffre__c</fullName>
    <formula>IF(ISBLANK(Offre2__r.HermesIntituleOffre__c),IF(ISBLANK(Offre1__r.HermesIntituleOffre__c),&#39;Aucune&#39;,Offre1__r.HermesIntituleOffre__c),Offre1__r.HermesIntituleOffre__c + &#39;-&#39; + Offre2__r.HermesIntituleOffre__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HermesIntituleOffre</label>
    <type>Text</type>
</CustomField>