force-app/main/default/objects/Zuora__Subscription__c/fields/HermesIntituleOffreNL__c.field-meta.xml
<CustomField>
    <fullName>HermesIntituleOffreNL__c</fullName>
    <formula>IF (ISBLANK(Offre2__r.HermesIntituleOffreNL__c),Offre1__r.HermesIntituleOffreNL__c,Offre1__r.HermesIntituleOffreNL__c + &#39;-&#39; + Offre2__r.HermesIntituleOffreNL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HermesIntituleOffreNL</label>
    <type>Text</type>
</CustomField>