force-app/main/default/objects/Zuora__Subscription__c/fields/LegacyExternalID__c.field-meta.xml
<CustomField>
    <fullName>LegacyExternalID__c</fullName>
    <label>LegacyExternalID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>