force-app/main/default/objects/Zuora__Subscription__c/fields/lien_porteur_payeur__c.field-meta.xml
<CustomField>
    <fullName>lien_porteur_payeur__c</fullName>
    <formula>IF(Payeur__c =&#39;&#39; , &quot;Porteur = Payeur&quot;, &#39;Porteur ≠ Payeur&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>lien porteur / payeur</label>
    <type>Text</type>
</CustomField>