force-app/main/default/objects/Zuora__Subscription__c/fields/Lieu__c.field-meta.xml
<CustomField>
    <fullName>Lieu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lieu</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>