force-app/main/default/objects/Zuora__Subscription__c/fields/Marche__c.field-meta.xml
<CustomField>
    <fullName>Marche__c</fullName>
    <description>BTOB, BTOC</description>
    <label>Marche</label>
    <length>10</length>
    <type>Text</type>
</CustomField>