force-app/main/default/objects/Zuora__Subscription__c/fields/MethodePaiement__c.field-meta.xml
<CustomField>
    <fullName>MethodePaiement__c</fullName>
    <label>Methode de paiement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>