force-app/main/default/objects/Zuora__Subscription__c/fields/ModeLivraison__c.field-meta.xml
<CustomField>
    <fullName>ModeLivraison__c</fullName>
    <label>ModeLivraison</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adresse Payeur</fullName>
            </value>
            <value>
                <fullName>Adresse Porteur</fullName>
            </value>
            <value>
                <fullName>Click Collect</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>