force-app/main/default/objects/Zuora__Subscription__c/fields/Offre1__c.field-meta.xml
<CustomField>
    <fullName>Offre1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offre1</label>
    <referenceTo>Offre__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions1</relationshipName>
    <type>Lookup</type>
</CustomField>