force-app/main/default/objects/Zuora__Subscription__c/fields/Offre2__c.field-meta.xml
<CustomField>
    <fullName>Offre2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offre2</label>
    <referenceTo>Offre__c</referenceTo>
    <relationshipLabel>Subscriptions (Offre2)</relationshipLabel>
    <relationshipName>Subscriptions2</relationshipName>
    <type>Lookup</type>
</CustomField>