force-app/main/default/objects/Zuora__Subscription__c/fields/Partition__c.field-meta.xml
<CustomField>
    <fullName>Partition__c</fullName>
    <description>Utiliser pour traiter en lots le batch updatetarif</description>
    <formula>MOD( DAY(  Zuora__ContractEffectiveDate__c  ) ,5) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>