force-app/main/default/objects/Zuora__Subscription__c/fields/Payeur__c.field-meta.xml
<CustomField>
    <fullName>Payeur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payeur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrat (Payeur)</relationshipLabel>
    <relationshipName>PayeurSubscription</relationshipName>
    <type>Lookup</type>
</CustomField>