force-app/main/default/objects/Zuora__Subscription__c/fields/Reabo_Flag__c.field-meta.xml
<CustomField>
    <fullName>Reabo_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag d&#39;éligibilité pour le réabonnement</description>
    <label>Eligibilité Réabonnement</label>
    <type>Checkbox</type>
</CustomField>