force-app/main/default/objects/Zuora__Subscription__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Bilendi</description>
    <label>Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>