force-app/main/default/objects/Zuora__Subscription__c/fields/TarifFacture__c.field-meta.xml
<CustomField>
    <fullName>TarifFacture__c</fullName>
    <label>TarifFacture</label>
    <length>10</length>
    <type>Text</type>
</CustomField>