force-app/main/default/objects/Zuora__Subscription__c/fields/Tech_AvecRembouesement__c.field-meta.xml
<CustomField>
    <fullName>Tech_AvecRembouesement__c</fullName>
    <label>Tech_AvecRembouesement</label>
    <length>5</length>
    <type>Text</type>
</CustomField>