force-app/main/default/objects/Zuora__Subscription__c/fields/Tech_DetteFraisGestion__c.field-meta.xml
<CustomField>
    <fullName>Tech_DetteFraisGestion__c</fullName>
    <label>Tech_DetteFraisGestion</label>
    <length>10</length>
    <type>Text</type>
</CustomField>