force-app/main/default/objects/Zuora__Subscription__c/fields/Tech_DetteNonEchue__c.field-meta.xml
<CustomField>
    <fullName>Tech_DetteNonEchue__c</fullName>
    <label>Tech_DetteNonEchue</label>
    <length>10</length>
    <type>Text</type>
</CustomField>