force-app/main/default/objects/Zuora__Subscription__c/fields/Tech_DetteTargetDate__c.field-meta.xml
<CustomField>
    <fullName>Tech_DetteTargetDate__c</fullName>
    <label>Tech_DetteTargetDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>