force-app/main/default/objects/Zuora__Subscription__c/fields/TECH_Offre_principale_trunc__c.field-meta.xml
<CustomField>
    <fullName>TECH_Offre_principale_trunc__c</fullName>
    <formula>IF(OR( TEXT(CodeOffrePrincipale__c)=&quot;UUCDI&quot;, TEXT(CodeOffrePrincipale__c)=&quot;UUCDD&quot;, TEXT(CodeOffrePrincipale__c)=&quot;UU&quot;), &quot;UU&quot;, 
LEFT(TEXT(CodeOffrePrincipale__c), 3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Offre_principale_trunc</label>
    <type>Text</type>
</CustomField>