force-app/main/default/objects/Zuora__Subscription__c/fields/TECH_Pays__c.field-meta.xml
<CustomField>
    <fullName>TECH_Pays__c</fullName>
    <formula>TEXT(Zuora__Account__r.ProduitUGC__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Pays</label>
    <type>Text</type>
</CustomField>