force-app/main/default/objects/Zuora__Subscription__c/fields/TECH_Region__c.field-meta.xml
<CustomField>
    <fullName>TECH_Region__c</fullName>
    <formula>Cinema__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Region</label>
    <type>Text</type>
</CustomField>