force-app/main/default/objects/Zuora__Subscription__c/fields/TECH_Vente_parrainee__c.field-meta.xml
<CustomField>
    <fullName>TECH_Vente_parrainee__c</fullName>
    <formula>IF(  ISBLANK(Zuora__Account__r.ID_parrain__c ), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Vente_parrainee</label>
    <type>Checkbox</type>
</CustomField>