force-app/main/default/objects/Zuora__Subscription__c/fields/TECH_With_code_promo__c.field-meta.xml
<CustomField>
    <fullName>TECH_With_code_promo__c</fullName>
    <formula>IF( ISBLANK(CodePromo__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_With_code_promo</label>
    <type>Checkbox</type>
</CustomField>