force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__AutoRenew__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AutoRenew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoRenew?</label>
    <type>Checkbox</type>
</CustomField>