force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__CancelledDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CancelledDate__c</fullName>
    <description>The date of the Amendment object that canceled the subscription.</description>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>