force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__ContractAcceptanceDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ContractAcceptanceDate__c</fullName>
    <description>This is the date on which the contract was accepted by the customer, and will trigger charges that have their trigger event set to Upon Customer Acceptance.</description>
    <label>Contract Acceptance Date</label>
    <type>Date</type>
</CustomField>