force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__ContractEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ContractEffectiveDate__c</fullName>
    <description>This is the date on which the contract becomes effective, and will trigger charges that have their trigger event set to Upon Contract Effective.</description>
    <label>Contract Effective Date</label>
    <type>Date</type>
</CustomField>