force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__CurrentTerm__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CurrentTerm__c</fullName>
    <label>Current Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>