force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__External_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora__External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>