force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__InitialTerm__c.field-meta.xml
<CustomField>
    <fullName>Zuora__InitialTerm__c</fullName>
    <label>Initial Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>