force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__NextChargeDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__NextChargeDate__c</fullName>
    <label>Next Charge Date</label>
    <type>Date</type>
</CustomField>