force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__NextRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__NextRenewalDate__c</fullName>
    <label>Next Renewal Date</label>
    <type>Date</type>
</CustomField>