force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__Notes__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Notes__c</fullName>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>