force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__OpportunityCloseDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__OpportunityCloseDate__c</fullName>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>