force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__OpportunityName__c.field-meta.xml
<CustomField>
    <fullName>Zuora__OpportunityName__c</fullName>
    <label>Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>