force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__OriginalCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__OriginalCreatedDate__c</fullName>
    <description>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</description>
    <inlineHelpText>The date when the subscription was originally created. This value is the same as the CreatedDate value until the subscription is amended.</inlineHelpText>
    <label>Original Created Date (Deprecated)</label>
    <type>Date</type>
</CustomField>