force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__OriginalId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__OriginalId__c</fullName>
    <description>The original ID of this subscription.</description>
    <label>Original Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>