force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__PreviousSubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PreviousSubscriptionId__c</fullName>
    <description>The subscription ID immediately prior to the current subscription.</description>
    <label>Previous Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>