force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__QuoteBusinessType__c.field-meta.xml
<CustomField>
    <fullName>Zuora__QuoteBusinessType__c</fullName>
    <label>Quote Business Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>