force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__QuoteNumber__c</fullName>
    <label>Quote Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>