force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__QuoteType__c.field-meta.xml
<CustomField>
    <fullName>Zuora__QuoteType__c</fullName>
    <label>Quote Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>