force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__RenewalTerm__c.field-meta.xml
<CustomField>
    <fullName>Zuora__RenewalTerm__c</fullName>
    <label>Renewal Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>