force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__RenewalTermPeriodType__c.field-meta.xml
<CustomField>
    <fullName>Zuora__RenewalTermPeriodType__c</fullName>
    <description>The period type for the subscription renewal term.</description>
    <inlineHelpText>The period type for the subscription renewal term.</inlineHelpText>
    <label>Renewal Term Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>