force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__ServiceActivationDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ServiceActivationDate__c</fullName>
    <description>This is when the service was activated, and will trigger charges that have their trigger event set to Upon Service Activation.</description>
    <label>Service Activation Date</label>
    <type>Date</type>
</CustomField>