force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__SubscriptionEndDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SubscriptionEndDate__c</fullName>
    <description>This is when the subscription ends. This is always equal to term end date, unless the subscription has been cancelled. If the subscription has been cancelled, this is set to the cancellation date.</description>
    <label>Subscription End Date</label>
    <type>Date</type>
</CustomField>