force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__SubscriptionNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SubscriptionNumber__c</fullName>
    <externalId>true</externalId>
    <label>Subscription Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>