force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__TCV__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TCV__c</fullName>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>