force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__TermEndDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TermEndDate__c</fullName>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>