force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__TermSettingType__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TermSettingType__c</fullName>
    <description>Case sensitive. Denotes if a subscription is evergreen (has no end date or term length) or has a term.</description>
    <label>Term Setting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TERMED</fullName>
            </value>
            <value>
                <fullName>EVERGREEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>