force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__TermStartDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TermStartDate__c</fullName>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>