force-app/main/default/objects/Zuora__Subscription__c/fields/Zuora__Zuora_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Zuora_Id__c</fullName>
    <description>The Zuora Id (external primary key) of this Subscription.</description>
    <inlineHelpText>The Zuora Id (external primary key) of this Subscription.</inlineHelpText>
    <label>Zuora Id (Deprecated)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>